test(replica): some integration testing and general improvements
